Ultimate CORS fix: Use HighestPrecedence FilterRegistrationBean for CorsFilter